force/src/objects/Test_Iterations__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents a specific time a test script is modified for testing.</description>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Type__c</fullName>
        <label>Execution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Test</fullName>
                </value>
                <value>
                    <fullName>SIT</fullName>
                </value>
                <value>
                    <fullName>Regression Test</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Result__c</fullName>
        <label>Overall Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Script__c</fullName>
        <label>Test Script</label>
        <referenceTo>Test_Script__c</referenceTo>
        <relationshipName>Test_Execution_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Iteration</label>
    <nameField>
        <displayFormat>TestIterations-{0000000}</displayFormat>
        <label>Test Iteration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Iterations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>